--- a/examen-2/styles.css
+++ b/examen-2/styles.css
@@ -20,107 +20,100 @@ body {
     font-family: "Poppins", sans-serif;
 }
 
-.main-form{
-    width: 90%;
-    margin: 0 auto;
-    margin-top: 30%;
-    display: flex;
-    flex-direction: column-reverse;
-}
-
 .section{
+    margin: 0 auto;
+    margin-top: 50px;
     background-color: white;
-    border-radius: 15px;
-    height: 400px;
+    width: 450px;
+    min-height: 450px;
+    border-radius: 16px;
+    padding: 20px 10px;
 }
 
 .title{
-    display: flex;
-    justify-content: center;
-    font-weight: 800;
-    margin-top: 15px;
+    text-align: center;
+    padding: 12px 0;
 }
 
 .form{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 12px;
+    margin-top: 12px;
 }
 
 input{
-    margin-top: 10px;
-    font-size: 18px;
-    padding: 10px 10px 10px 5px;
-    margin-left: 20px;
-    width: 80%;
+    width: 90%;
+    height: 36px;
+    border: none;
+    border-bottom: 1px solid gray;
+}
+
+input:focus{
+    border: none;
+    outline: none;
+    border-bottom: 1px solid rgb(100, 100, 216);
+}
+
+input:active{
+    border: none;
+}
+
+a{
+    text-decoration: none;
+    color: #12c2e9;
 }
 
 label{
-    margin-top: 10px;
-    margin-left: 20px;
-    font-family: Helvetica;
-    font-size: 14px;
+    margin-top: 12px;
 }
 
 .container-button{
+    width: 100%;
     display: flex;
-    justify-content: center;
-    margin-top: 40px;
-}
-
-.button{
-    cursor: pointer;
-    background: #12c2e9; 
-  background: -webkit-linear-gradient(
-    to left,
-    #f64f59,
-    #c471ed,
-    #12c2e9
-  );
-  background: linear-gradient(
-    to left,
-    #f64f59,
-    #c471ed,
-    #12c2e9
-  );
-   color: white;
-   width: 80%;
-   height: 40px;
-   border: 4px;
-   font-size: 16px;
-   border-radius: 10px;
-}
-
-.container-text{
-    display: flex;
-    justify-content: center;
-    margin-top: 30px;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 22px;
+    gap: 20px;
 }
 
 .text{
-    margin-left: 20px;
-    margin-top: 20px;
-    font-size: 17px;
+    margin-top: 12px;
 }
 
-.link, .link-2{
-    text-decoration: none;
+.button{
+    background: #12c2e9;
+    background: -webkit-linear-gradient(
+      to left,
+      #f64f59,
+      #c471ed,
+      #12c2e9
+    );
+    background: linear-gradient(
+      to left,
+      #f64f59,
+      #c471ed,
+      #12c2e9
+    );
+    color: white;
+    font-weight: 700;
+    border: none;
+    width: 80%;
+    padding: 10px 20px;
+    border-radius: 16px;
 }
 
-p{
-    font-family: sans-serif;
+.avatar{
+        height: 64px;
+        object-fit: cover;
+        object-position: center;
+        width: 64px;
 }
 
-@media (min-width: 768px){
-    .main-form{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        width: 70%;
-        margin: auto;
-        margin-top: 5%;
-    }
+@media (max-width: 768px){
     .section{
-        width: 50%;
-        height: 430px;
+        width: 300px;
+        min-height: 300px;
     }
 }
